# core

./: Cargo.toml  README.md  flake.nix
auth/: Cargo.toml
auth/src/: passwords.rs
captcha/: Cargo.toml
captcha/src/: error.rs  lib.rs
core/: Cargo.toml
core/src/: errors.rs  lib.rs  rt.rs  world.rs
core/src/errors/: authors.rs  games.rs  marks.rs  messages.rs
core/src/requests/: authors.rs  boards.rs  files.rs  games.rs  marks.rs  mod.rs  tabs.rs  users.rs
core/src/service/: api_looks.rs  articles.rs  authors.rs  authz.rs  blogs.rs  boards.rs  files.rs  games.rs  marks.rs  messages.rs  mod.rs  tabs.rs  threads.rs  uploads.rs  users.rs
core/src/types/: author.rs  board.rs  entity.rs  file.rs  game.rs  message.rs  slug.rs  tab.rs  true.rs
core/src/types/file/: game_file.rs  image.rs
core/src/world/: real.rs  testing.rs
email/: Cargo.toml
email/src/: error.rs  lib.rs  mock.rs  smtp.rs
http/: Cargo.toml
http/src/: format.rs  lib.rs
http/src/client/: articles.rs  auth.rs  authors.rs  blogs.rs  boards.rs  games.rs  marks.rs  messages.rs  mod.rs  tabs.rs  threads.rs  uploads.rs  users.rs
http/src/requests/: articles.rs  authors.rs  blogs.rs  boards.rs  files.rs  games.rs  marks.rs  messages.rs  mod.rs  status_code.rs  tabs.rs  threads.rs  uploads.rs  users.rs
http/src/server/: config.rs  context.rs  handler.rs  mod.rs  openapi.rs  request.rs  routes.rs
http/src/server/request/: extract.rs
http/src/server/response/: mod.rs
http/src/server/routes/: authors.rs  blogs.rs  files.rs  forum.rs  games.rs  marks.rs  uploads.rs  users.rs
mcp/: Cargo.toml
mcp/src/: catalog.rs  lib.rs  registry.rs  rpc.rs
mcp/tests/: it.rs
protocol/: Cargo.toml
protocol/src/: de.rs  errors.rs  lib.rs  uploads.rs
protocol/src/errors/: articles.rs  auth.rs  blogs.rs  boards.rs  ext.rs  files.rs  tabs.rs  threads.rs  uploads.rs  users.rs
protocol/src/requests/: articles.rs  blogs.rs  games.rs  messages.rs  mod.rs  sys.rs  tabs.rs  threads.rs  uploads.rs  users.rs
protocol/src/types/: article.rs  author.rs  blog.rs  board.rs  captcha.rs  entity.rs  file.rs  game.rs  mark.rs  mod.rs  patch.rs  session.rs  thread.rs  upload.rs  user.rs
protocol/src/types/file/: image.rs
protocol/tests/: patch_defaults.rs
viendesu/: Cargo.toml
viendesu/src/: lib.rs
