[workspace]
members = [
    "core/",
    "http/",
    "auth/",
    "captcha/",
    "viendesu/",
]
resolver = "3"

[workspace.dependencies]
eva = { git = "ssh://forgejo@git.viende.su:61488/VienDesu/eva.git" }

futures = "0.3.31"
tokio = "1.44.2"
eyre = "0.6.12"

serde_json = "1.0.137"
serde_with = { version = "3.12.0", default-features = false, features = ["alloc", "macros"] }
serde = "1"
schemars = { git = "ssh://forgejo@git.viende.su:61488/VienDesu/schemars.git", features = [
    "compact_str08",
    "smallvec1",
    "bytes1",
    "url2",
    "hashbrown015"
] }

viendesu-captcha = { path = "captcha/" }
viendesu-auth = { path = "auth/" }
viendesu-http = { path = "http/" }
viendesu-core = { path = "core/" }

# TODO: upstream.
[patch.crates-io]
schemars = { git = "ssh://forgejo@git.viende.su:61488/VienDesu/schemars.git", version = "1.0.0-alpha.17" }


