[package]
name = "viendesu-http"
version = "0.1.0"
edition = "2024"

[features]
default = []
client = ["dep:reqwest"]
server = [
    "dep:axum",
    "dep:http-body-util",
    "dep:tower-http",
    "dep:serde_urlencoded",
    "dep:serde_path_to_error",
    "dep:form_urlencoded",
    "eva/tokio",
    "tokio/net",
    "dep:fastrace-axum"
]

[dependencies]
viendesu-core.workspace = true
http = "1.3.1"

serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
futures.workspace = true

eva.workspace = true
eyre.workspace = true

axum = { optional = true, version = "0.8.4", default-features = false, features = ["http2", "ws", "macros", "multipart"] }
http-body-util = { version = "0.1.3", optional = true }
tower-http = { optional = true, version = "0.6.6", default-features = false, features = ["cors"] }
serde_urlencoded = { version = "0.7.1", optional = true }
serde_path_to_error = { version = "0.1", optional = true }
form_urlencoded = { version = "1", optional = true }

tokio = { workspace = true, optional = true }

reqwest = { optional = true, version = "0.12.23", default-features = false, features = ["multipart", "stream"] }
fastrace-axum = { optional = true, version = "0.1.3" }
